move to browser supported libraries

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-csvw-editor",
+  "name": "vue-csvw-browser-editor",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,22 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vue": "^3.4.0",
+    "bootstrap": "^5.3.2",
+    "vue-codemirror": "^6.0.0",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/theme-one-dark": "^6.1.2",
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-    "bootstrap": "^5.3.2",
-    "buffer": "^6.0.3",
-    "events": "^3.3.0",
     "jsonld": "^8.3.2",
-    "n3": "^1.17.3",
-    "papaparse": "^5.4.1",
-    "rdf-ext": "^2.3.0",
-    "rdf-parser-csvw": "^1.0.3",
-    "stream-browserify": "^3.0.0",
-    "util": "^0.12.5",
-    "vue": "^3.4.0",
-    "vue-codemirror": "^6.0.1"
+    "papaparse": "^5.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
