--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "bootstrap": "^5.3.2",
-    "vue-codemirror": "^6.0.0",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/theme-one-dark": "^6.1.2",
+    "bootstrap": "^5.3.2",
+    "file-saver": "^2.0.5",
     "jsonld": "^8.3.2",
+    "jszip": "^3.10.1",
     "papaparse": "^5.4.1",
+    "vue": "^3.4.0",
+    "vue-codemirror": "^6.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
